One more css change for fixing height of visibility widget and swap to new Select control.

--- a/test-apps/ui-test-app/src/frontend/appui/widgets/VisibilityWidget.scss
+++ b/test-apps/ui-test-app/src/frontend/appui/widgets/VisibilityWidget.scss
@@ -34,6 +34,7 @@
     flex-direction: column;
     border: 1px solid #ccc;
     margin-top: 4px;
+    overflow: hidden;
   }
 
   .ui-test-app-visibility-tree-toolbar {
